create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -619,370 +619,26 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
-.cid-sxkEKnu9kP .dropdown-item:before {
-  font-family: MobiriseIcons !important;
-  content: '\e966';
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
+.cid-CCeK9LbJFD {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: #f7ed4a;
+}
+.cid-CCeK9LbJFD .mbr-section {
   text-align: center;
-  overflow: hidden;
-  -webkit-transform: scale(0, 1);
-  transform: scale(0, 1);
-  -webkit-transition: all 0.25s ease-in-out;
-  -moz-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
+  color: #fff;
 }
-.cid-sxkEKnu9kP .dropdown-item:not(:last-child) {
-  border-bottom: 1px solid lightgray;
+.cid-CCeK9LbJFD p {
+  display: inline;
+  font-size: 19px;
+  color: #FFD100;
 }
-.cid-sxkEKnu9kP .dropdown-menu {
-  padding: 0;
-  background: #ffffff !important;
+.cid-CCeK9LbJFD .marquee-rtl {
+  padding-right: 1%;
+  padding-left: 1%;
 }
-.cid-sxkEKnu9kP .dropdown-item {
-  color: #000000 !important;
-}
-.cid-sxkEKnu9kP .dropdown-item:hover {
-  color: #000000 !important;
-}
-.cid-sxkEKnu9kP .nav-link {
-  position: relative;
-  font-weight: 600;
-}
-.cid-sxkEKnu9kP .nav-link:hover {
-  color: #f7ed4a !important;
-}
-.cid-sxkEKnu9kP .btn-white {
-  color: #1860df !important;
-}
-.cid-sxkEKnu9kP .btn:hover {
-  border-color: #f7ed4a !important;
-  color: #f7ed4a !important;
-}
-.cid-sxkEKnu9kP .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: 0.667em 1em !important;
-}
-.cid-sxkEKnu9kP .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-sxkEKnu9kP .container {
-  display: flex;
-  margin: auto;
-}
-.cid-sxkEKnu9kP .navbar.navbar-short .nav-link,
-.cid-sxkEKnu9kP .navbar.navbar-short .navbar-caption,
-.cid-sxkEKnu9kP .navbar.navbar-short .mbr-iconfont {
-  color: #ffffff !important;
-  border-color: #ffffff;
-}
-.cid-sxkEKnu9kP .navbar.navbar-short .hamburger span {
-  background: #ffffff !important;
-}
-.cid-sxkEKnu9kP .navbar-caption {
-  padding-right: 3rem;
-}
-.cid-sxkEKnu9kP .navbar.opened {
-  background: #000000 !important;
-}
-.cid-sxkEKnu9kP .nav-item:focus,
-.cid-sxkEKnu9kP .nav-link:focus {
-  outline: none;
-}
-.cid-sxkEKnu9kP .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  -webkit-transition: all 0.25s ease-in-out;
-  -moz-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-}
-.cid-sxkEKnu9kP .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-sxkEKnu9kP .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-left: -1.8rem;
-  padding-right: 1rem;
-  font-size: inherit;
-}
-.cid-sxkEKnu9kP .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  -webkit-transform: scale(1, 1);
-  transform: scale(1, 1);
-  -webkit-transition: all 0.25s ease-in-out;
-  -moz-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-}
-.cid-sxkEKnu9kP .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-sxkEKnu9kP .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.5em 1.5em 0.5em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-sxkEKnu9kP .navbar {
-  min-height: 77px;
-  transition: all 0.3s;
-  background: #000000;
-  background: none;
-}
-.cid-sxkEKnu9kP .navbar.opened {
-  transition: all 0.3s;
-}
-.cid-sxkEKnu9kP .navbar .dropdown-item {
-  padding: 0.5rem 1.5rem;
-}
-.cid-sxkEKnu9kP .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-sxkEKnu9kP .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-sxkEKnu9kP .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-.cid-sxkEKnu9kP .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-sxkEKnu9kP .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-sxkEKnu9kP .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle='dropdown-submenu']:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 55%;
-}
-.cid-sxkEKnu9kP .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-sxkEKnu9kP .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: 0.25rem 1.5rem;
-  text-align: center;
-}
-.cid-sxkEKnu9kP .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-@media (max-width: 991px) {
-  .cid-sxkEKnu9kP .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-sxkEKnu9kP .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-sxkEKnu9kP .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-sxkEKnu9kP .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-sxkEKnu9kP .navbar .dropdown-menu .dropdown-toggle[data-toggle='dropdown-submenu']:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 55%;
-  }
-  .cid-sxkEKnu9kP .navbar .navbar-logo img {
-    height: 3.8rem !important;
-  }
-  .cid-sxkEKnu9kP .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-sxkEKnu9kP .navbar .dropdown-menu .dropdown-item {
-    padding: 0.25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-sxkEKnu9kP .navbar .navbar-brand {
-    -webkit-flex-shrink: initial;
-    flex-shrink: initial;
-    -webkit-flex-basis: auto;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-sxkEKnu9kP .navbar .navbar-toggler {
-    -webkit-flex-basis: auto;
-    flex-basis: auto;
-  }
-  .cid-sxkEKnu9kP .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-}
-.cid-sxkEKnu9kP .navbar.navbar-short {
-  background: #000000 !important;
-  min-height: 60px;
-}
-.cid-sxkEKnu9kP .navbar.navbar-short .navbar-logo img {
-  height: 3rem !important;
-}
-.cid-sxkEKnu9kP .navbar.navbar-short .navbar-brand {
-  padding: 0;
-}
-.cid-sxkEKnu9kP .navbar-brand {
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-  -webkit-align-items: center;
-  align-items: center;
-  margin-right: 0;
-  padding: 0;
-  transition: all 0.3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-sxkEKnu9kP .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-sxkEKnu9kP .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-sxkEKnu9kP .dropdown-item.active,
-.cid-sxkEKnu9kP .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-sxkEKnu9kP .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-sxkEKnu9kP .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-sxkEKnu9kP .nav-dropdown .link.dropdown-toggle[aria-expanded='true'] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-sxkEKnu9kP .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #000000;
-}
-.cid-sxkEKnu9kP .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-sxkEKnu9kP .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-sxkEKnu9kP ul.navbar-nav {
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.cid-sxkEKnu9kP .navbar-buttons {
-  text-align: center;
-}
-.cid-sxkEKnu9kP button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all 0.2s;
-  position: relative;
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-sxkEKnu9kP button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-sxkEKnu9kP button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all 0.2s;
-}
-.cid-sxkEKnu9kP button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-sxkEKnu9kP button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-sxkEKnu9kP button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all 0.2s;
-}
-.cid-sxkEKnu9kP nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-sxkEKnu9kP nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all 0.25s;
-}
-.cid-sxkEKnu9kP nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all 0.25s;
-}
-.cid-sxkEKnu9kP nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-sxkEKnu9kP .navbar-dropdown {
-  padding: 0.5rem 1rem;
-}
-.cid-sxkEKnu9kP a.nav-link {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-sxkEKnu9kP .mbr-iconfont {
-  font-size: 1.5rem;
-  padding-right: 0.5rem;
-}
-.cid-sxkEKnu9kP .icons-menu {
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-.cid-sxkEKnu9kP .icons-menu span {
-  font-size: 20px;
+.cid-CCeK9LbJFD .media-container-row .mbr-text {
   color: #ffffff;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-sxkEKnu9kP .navbar {
-    height: 77px;
-  }
-  .cid-sxkEKnu9kP .navbar.opened {
-    height: auto;
-  }
-  .cid-sxkEKnu9kP .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
 }
 .cid-qYhg450rlP {
   background-image: url("../../../assets/images/nutrishop-fresno-backgroundf-1920x972.jpg");
