create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1291,6 +1291,33 @@ section.lazy-placeholder:after {
     padding: 1rem!important;
   }
 }
+.cid-tTbOlSlGOh {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #1860df;
+}
+.cid-tTbOlSlGOh .title {
+  margin-bottom: 2rem;
+}
+.cid-tTbOlSlGOh .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tTbOlSlGOh a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-tTbOlSlGOh a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-tTbOlSlGOh textarea.form-control {
+  min-height: 188px;
+}
+.cid-tTbOlSlGOh H2 {
+  color: #ffffff;
+}
+.cid-tTbOlSlGOh LABEL {
+  color: #ffffff;
+}
 .cid-qYhHqWNcRu {
   padding-top: 45px;
   padding-bottom: 30px;
