--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1117,6 +1117,89 @@ section.lazy-placeholder:after {
 .cid-tTbtE05n7J .mbr-section-subtitle {
   color: #ffffff;
 }
+.cid-tTfYQCs6B2 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #1860df;
+}
+.cid-tTfYQCs6B2 h2 {
+  text-align: left;
+}
+.cid-tTfYQCs6B2 h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-tTfYQCs6B2 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-tTfYQCs6B2 .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-tTfYQCs6B2 .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-tTfYQCs6B2 .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-tTfYQCs6B2 .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-tTfYQCs6B2 .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-tTfYQCs6B2 .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-tTfYQCs6B2 .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+  .cid-tTfYQCs6B2 .media-container-row {
+    -webkit-flex-direction: row-reverse;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tTfYQCs6B2 .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    padding-top: 1rem;
+    margin-top: 2rem;
+  }
+  .cid-tTfYQCs6B2 .media-container-row {
+    -webkit-flex-direction: column-reverse;
+  }
+}
+@media (max-width: 300px) {
+  .cid-tTfYQCs6B2 .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-tTfYQCs6B2 H2 {
+  color: #ffffff;
+}
+.cid-tTfYQCs6B2 H4 {
+  color: #ffffff;
+}
+.cid-tTfYQCs6B2 P {
+  color: #ffffff;
+}
 .cid-sxkONclhJM {
   padding-top: 30px;
   padding-bottom: 15px;
