--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -848,6 +848,264 @@ section.lazy-placeholder:after {
 .cid-sxkLyCARdG H4 {
   color: #777777;
 }
+.cid-tTfTO1pvtX {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f7ed4a;
+}
+.cid-tTfTO1pvtX .testimonials-container {
+  margin: 0 auto;
+}
+.cid-tTfTO1pvtX .testimonials-container .testimonials-item {
+  justify-content: center;
+  margin-top: 3rem;
+  -webkit-justify-content: center;
+}
+.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user {
+  background: #ffffff;
+}
+.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user.row {
+  margin: 0;
+}
+.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user .user_image {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  margin: 2rem auto 2rem auto;
+}
+.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user .testimonials-caption {
+  padding: 2rem;
+  padding: 2rem 2rem 2rem 0;
+}
+@media (max-width: 260px) {
+  .cid-tTfTO1pvtX .user_image {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tTfTO1pvtX .testimonials-caption {
+    padding: 0 2rem 2rem 2rem !important;
+  }
+}
+.cid-tTfTO1pvtX H2 {
+  color: #000000;
+}
+.cid-tTfTO1pvtX .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-tTOZJfSDkV {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #000000;
+}
+.cid-tTOZJfSDkV .carousel-control {
+  background: #000;
+}
+.cid-tTOZJfSDkV .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tTOZJfSDkV .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-tTOZJfSDkV .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-tTOZJfSDkV .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-tTOZJfSDkV .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-tTOZJfSDkV .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-tTOZJfSDkV .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-tTOZJfSDkV .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-tTOZJfSDkV .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-tTOZJfSDkV .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-tTOZJfSDkV .cloneditem-1,
+.cid-tTOZJfSDkV .cloneditem-2,
+.cid-tTOZJfSDkV .cloneditem-3,
+.cid-tTOZJfSDkV .cloneditem-4,
+.cid-tTOZJfSDkV .cloneditem-5 {
+  display: none;
+}
+.cid-tTOZJfSDkV .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-tTOZJfSDkV .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides2 .cloneditem-1,
+  .cid-tTOZJfSDkV .carousel-inner.slides2 .cloneditem-2,
+  .cid-tTOZJfSDkV .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides3 .cloneditem-1,
+  .cid-tTOZJfSDkV .carousel-inner.slides3 .cloneditem-2,
+  .cid-tTOZJfSDkV .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides4 .cloneditem-1,
+  .cid-tTOZJfSDkV .carousel-inner.slides4 .cloneditem-2,
+  .cid-tTOZJfSDkV .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides5 .cloneditem-1,
+  .cid-tTOZJfSDkV .carousel-inner.slides5 .cloneditem-2,
+  .cid-tTOZJfSDkV .carousel-inner.slides5 .cloneditem-3,
+  .cid-tTOZJfSDkV .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-tTOZJfSDkV .carousel-inner.slides6 .cloneditem-1,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 .cloneditem-2,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 .cloneditem-3,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 .cloneditem-4,
+  .cid-tTOZJfSDkV .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
+}
+.cid-tTOZJfSDkV H2 {
+  color: #ffffff;
+}
 .cid-sxkGrejS53 {
   padding-top: 5rem;
   padding-bottom: 6rem;
@@ -1131,6 +1389,93 @@ section.lazy-placeholder:after {
 .cid-sxkONclhJM H3 {
   color: #000000;
 }
+.cid-tTPbs9Ic5i {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #000000;
+}
+.cid-tTPbs9Ic5i .mbr-section-subtitle,
+.cid-tTPbs9Ic5i .mbr-text {
+  color: #767676;
+}
+.cid-tTPbs9Ic5i .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tTPbs9Ic5i .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tTPbs9Ic5i .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-tTPbs9Ic5i .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-tTPbs9Ic5i .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-tTPbs9Ic5i .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-tTPbs9Ic5i .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-tTPbs9Ic5i .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-tTPbs9Ic5i .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-tTPbs9Ic5i .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-tTPbs9Ic5i .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-tTPbs9Ic5i .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-tTPbs9Ic5i .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-tTPbs9Ic5i .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-tTPbs9Ic5i .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tTPbs9Ic5i .mbr-section-subtitle {
+  color: #ffffff;
+}
 .cid-tTfYQCs6B2 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1213,57 +1558,6 @@ section.lazy-placeholder:after {
 }
 .cid-tTfYQCs6B2 P {
   color: #ffffff;
-}
-.cid-tTfTO1pvtX {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #f7ed4a;
-}
-.cid-tTfTO1pvtX .testimonials-container {
-  margin: 0 auto;
-}
-.cid-tTfTO1pvtX .testimonials-container .testimonials-item {
-  justify-content: center;
-  margin-top: 3rem;
-  -webkit-justify-content: center;
-}
-.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user {
-  background: #ffffff;
-}
-.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user.row {
-  margin: 0;
-}
-.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user .user_image {
-  width: 150px;
-  height: 150px;
-  overflow: hidden;
-  margin: 2rem auto 2rem auto;
-}
-.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user .user_image img {
-  width: 100%;
-  min-width: 100%;
-  min-height: 100%;
-}
-.cid-tTfTO1pvtX .testimonials-container .testimonials-item .user .testimonials-caption {
-  padding: 2rem;
-  padding: 2rem 2rem 2rem 0;
-}
-@media (max-width: 260px) {
-  .cid-tTfTO1pvtX .user_image {
-    width: 100% !important;
-    height: auto !important;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tTfTO1pvtX .testimonials-caption {
-    padding: 0 2rem 2rem 2rem !important;
-  }
-}
-.cid-tTfTO1pvtX H2 {
-  color: #000000;
-}
-.cid-tTfTO1pvtX .mbr-section-subtitle {
-  color: #000000;
 }
 .cid-sx2QjlEHme {
   padding-top: 30px;
@@ -1471,4 +1765,7 @@ section.lazy-placeholder:after {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #000000;
+}
+.cid-qYhJ33wf8P .media-container-row .mbr-text {
+  text-align: center;
 }
