--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1476,10 +1476,89 @@ section.lazy-placeholder:after {
 .cid-tTPbs9Ic5i .mbr-section-subtitle {
   color: #ffffff;
 }
+.cid-tTPpUcniGh {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #1860df;
+}
+.cid-tTPpUcniGh P {
+  color: #767676;
+}
+.cid-tTPpUcniGh H1 {
+  color: #ffffff;
+}
+.cid-tTPpUcniGh .mbr-text,
+.cid-tTPpUcniGh .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-tTPlpGc31C {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #1860df;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.cid-tTPlpGc31C .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-tTPlpGc31C .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tTPlpGc31C .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-tTPlpGc31C .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-tTPlpGc31C .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-tTPlpGc31C .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-tTPlpGc31C .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-tTPlpGc31C .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-tTPlpGc31C .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
 .cid-tTfYQCs6B2 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #1860df;
+  background-color: #f7ed4a;
 }
 .cid-tTfYQCs6B2 h2 {
   text-align: left;
@@ -1551,13 +1630,13 @@ section.lazy-placeholder:after {
   }
 }
 .cid-tTfYQCs6B2 H2 {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-tTfYQCs6B2 H4 {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-tTfYQCs6B2 P {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-sx2QjlEHme {
   padding-top: 30px;
